--- a/ingex.html
+++ b/ingex.html
@@ -14,7 +14,7 @@
             <h1>Vitalii Horoshko</h1>
             <h2>Front-end Developer</h2>
             <img src="./img/photo-of-me.jpg" alt="Photo Of Me">
-            <h2>More information about me look <a class="cv_btn" href="#">here</a></h2>
+            <h2>More information about me look <a class="cv_btn" href="https://github.com/vitaliihoroshko/vitaliihoroshko.github.io/raw/main/docs/vitalii_horoshko_cv.pdf">here</a></h2>
         </div>
         <table class="contacts">
             <tr>
